--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
     "files.associations": {
-        "__bit_reference": "c",
-        "__hash_table": "c",
-        "__split_buffer": "c",
-        "array": "c",
-        "initializer_list": "c",
-        "string": "c",
-        "string_view": "c",
-        "unordered_map": "c",
-        "vector": "c",
-        "so_long.h": "c"
-    }
+		"__bit_reference": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"initializer_list": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"vector": "c",
+		"so_long.h": "c",
+		"mlx.h": "c",
+		"libft.h": "c"
+	}
 }
